Conver en to fr

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -142,6 +142,88 @@
      "checkout_terms" : "the terms and conditions",
      "checkout_description" : "Your data will be used to process your order, promote your experience on this site and for other purposes described in our privacy policy. I have read and agree to the ehealthiii.com terms and conditions and understand that through this purchase I am signing up for ehealthiii.com and will receive email newsletters. ehealthiii.com is a subscription-based shopping membership service, priced at kr65 every 30 day, after a 3-day trial period, unless canceled before the trial ends. from 3 days to 2.95kr. Payment is made via an encrypted SSL connection. If you need more information, please contact us at support@plusdeal.fr.",
      "add" : "add",
-     "quantity" : "quantity"
+     "quantity" : "quantity",
      
+     "Luxery at a discounted price": "Luxery at a discounted price",
+     "Become a Plus member and gain access to our products at a discounted price. Try first 7 days for free (hereafter €19.95 per month)": "Become a Plus member and gain access to our products at a discounted price. Try first 7 days for free (hereafter €19.95 per month)",
+     "SHOP NOW": "SHOP NOW",
+     "Save up to 80%": "Save up to 80%",
+     "On more than 1.000 well known brands": "On more than 1.000 well known brands",
+     "Fast delivery": "Fast delivery",
+     "Get fast and free delivery all over the world": "Get fast and free delivery all over the world",
+     "Secure payment": "Secure payment",
+     "We use SSL and ensure that you are secure when you shop on our site": "We use SSL and ensure that you are secure when you shop on our site",
+     "24/7 Customer Support": "24/7 Customer Support",
+     "Do you have any questions or issues? Then don't hesitate to contact us": "Do you have any questions or issues? Then don't hesitate to contact us",
+     "Bestsellers": "Bestsellers",
+     "for you": "for you",
+     "New products": "New products",
+     "new products": "new products",
+     "View all new products": "View all new products",
+     "PlusDeal' prices are for both members and non-members.": "PlusDeal' prices are for both members and non-members.",
+     "Membership costs": "Membership costs",
+     "month": "month",
+     "If the membership is not terminated within the first 7 days,": "If the membership is not terminated within the first 7 days,",
+     "the membership automatically continues at €19.95/month,": "the membership automatically continues at €19.95/month,",
+     "but it can always be terminated at the end of a month!": "but it can always be terminated at the end of a month!",
+     "The first 7 days are free!": "The first 7 days are free!",
+     "Read more": "Read more",
+     "here": "here",
+     "Understood": "Understood",
+     "Why we": "Why we",
+     "Search": "Search",
+     "Is delivery alway free?": "Is delivery alway free?",
+     "Delivery is free for all paying members. If you're not a paying maybe then you will be charges 3.95€ for shipping.": "Delivery is free for all paying members. If you're not a paying maybe then you will be charges 3.95€ for shipping.",
+     "What is your cancellation policy?": "What is your cancellation policy?",
+     "You can cancel you membership at any point. But you can't get a refund for your already paid membership.": "You can cancel you membership at any point. But you can't get a refund for your already paid membership.",
+     "How long is the delivery time?": "How long is the delivery time?",
+     "We always do our best to deliver your package within 3-5 days. If you haven't received your order - please contact customer support.": "We always do our best to deliver your package within 3-5 days. If you haven't received your order - please contact customer support.",
+     "Still have question?": "Still have question?",
+     "Can’t find the answer your’re looking for? Please chat to our friendly team.": "Can’t find the answer your’re looking for? Please chat to our friendly team.",
+     "get in touch": "get in touch",
+     "Subscribe with us": "Subscribe with us",
+     "subscribe": "subscribe",
+     "Beauty": "Beauty",
+     "Hair care": "Hair care",
+     "Make-up": "Make-up",
+     "Perfumes and Fragrances": "Perfumes and Fragrances",
+     "Skincare": "Skincare",
+     "Special offer": "Special offer",
+     "Home and cooking": "Home and cooking",
+     "Home Decor": "Home Decor",
+     "Kitchenware": "Kitchenware",
+     "Small Electrical appliances": "Small Electrical appliances",
+     "Storage and organisation": "Storage and organisation",
+     "Normalpris": "Normalpris",
+     "Health and personal care": "Health and personal care",
+     "Diet and nutrition": "Diet and nutrition",
+     "Healthcare": "Healthcare",
+     "Oral care": "Oral care",
+     "Vitamins, minerals and supplements": "Vitamins, minerals and supplements",
+     "Pet products": "Pet products",
+     "Cats": "Cats",
+     "Dogs": "Dogs",
+     "Horses": "Horses",
+     "Small animals": "Small animals",
+     "Account": "Account",
+     "Login": "Login",
+     "Categories": "Categories",
+     "Make-Up": "Make-Up",
+     "Body Care": "Body Care",
+     "Face Care": "Face Care",
+     "Babies and Children": "Babies and Children",
+     "Products": "Products",
+     "New Products": "New Products",
+     "Popular Products": "Popular Products",
+     "Event Products": "Event Products",
+     "Company": "Company",
+     "Terms and Conditions": "Terms and Conditions",
+     "Privacy Policy": "Privacy Policy",
+     "Contact Us": "Contact Us",
+     "Follow us": "Follow us",
+     "All Rights Reserved": "All Rights Reserved",
+     "Enter your email Address": "Enter your email Address",
+     "Membership": "Membership",
+     "Search...": "Search...",
+     "Basket": "Basket"
 }
