--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -141,5 +141,88 @@
     "card_number" : "Numéro de carte",
     "accept" : "j'ai lu et accepté" ,
     "checkout_terms" : "Les termes et conditions ",
-    "checkout_description" : "Vos données seront utilisées pour traiter votre commande, promouvoir votre expérience sur ce site et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de ehealthiii.com et je comprends qu'à travers cet achat, je m'inscris à ehealthiii.com et je recevrai des newsletters par e-mail. ehealthiii.com est un service d'abonnement au shopping, au prix de €67 tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de l'essai. de 3 jours à €2.45. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@plusdeal.fr."
+    "checkout_description" : "Vos données seront utilisées pour traiter votre commande, promouvoir votre expérience sur ce site et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de ehealthiii.com et je comprends qu'à travers cet achat, je m'inscris à ehealthiii.com et je recevrai des newsletters par e-mail. ehealthiii.com est un service d'abonnement au shopping, au prix de €67 tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de l'essai. de 3 jours à €2.45. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@plusdeal.fr.",
+
+    "Luxery at a discounted price": "Le luxe à prix réduit",
+    "Become a Plus member and gain access to our products at a discounted price. Try first 7 days for free (hereafter €19.95 per month)": "Devenez membre Plus et accédez à nos produits à prix réduit. Essayez gratuitement pendant 7 jours (ci-après 19,95 € par mois).",
+    "SHOP NOW": "ACHETEZ MAINTENANT",
+    "Save up to 80%": "Économisez jusqu'à 80 %",
+    "On more than 1.000 well known brands": "Sur plus de 1 000 marques connues",
+    "Fast delivery": "Livraison rapide",
+    "Get fast and free delivery all over the world": "Bénéficiez d'une livraison rapide et gratuite partout dans le monde",
+    "Secure payment": "Paiement sécurisé",
+    "We use SSL and ensure that you are secure when you shop on our site": "Nous utilisons SSL et garantissons que vous êtes en sécurité lorsque vous achetez sur notre site",
+    "24/7 Customer Support": "Assistance clientèle 24h/24 et 7j/7",
+    "Do you have any questions or issues? Then don't hesitate to contact us": "Vous avez des questions ou des problèmes ? N'hésitez pas à nous contacter.",
+    "Bestsellers": "Meilleures ventes",
+    "for you": "pour toi",
+    "New products": "Nouveaux produits",
+    "new products": "nouveaux produits",
+    "View all new products": "Voir tous les nouveaux produits",
+    "PlusDeal' prices are for both members and non-members.": "Les tarifs PlusDeal s'appliquent aux membres et aux non-membres.",
+    "Membership costs": "Frais d'adhésion",
+    "month": "mois",
+    "If the membership is not terminated within the first 7 days,": "Si l'adhésion n'est pas résiliée dans les 7 premiers jours,",
+    "the membership automatically continues at €19.95/month,": "l'adhésion se poursuit automatiquement à 19,95 €/mois,",
+    "but it can always be terminated at the end of a month!": "mais il peut toujours être résilié à la fin d'un mois !",
+    "The first 7 days are free!": "Les 7 premiers jours sont gratuits !",
+    "Read more": "En savoir plus",
+    "here": "ici",
+    "Understood": "Compris",
+    "Why we": "Pourquoi nous",
+    "Search": "Recherche",
+    "Is delivery alway free?": "La livraison est-elle toujours gratuite ?",
+    "Delivery is free for all paying members. If you're not a paying maybe then you will be charges 3.95€ for shipping.": "La livraison est gratuite pour tous les membres payants. Si vous n'êtes pas abonné, des frais de livraison de 3,95 € vous seront facturés.",
+    "What is your cancellation policy?": "Quelle est votre politique d'annulation ?",
+    "You can cancel you membership at any point. But you can't get a refund for your already paid membership.": "Vous pouvez annuler votre abonnement à tout moment. Cependant, vous ne pourrez pas obtenir de remboursement pour un abonnement déjà payé.",
+    "How long is the delivery time?": "Combien de temps dure le délai de livraison ?",
+    "We always do our best to deliver your package within 3-5 days. If you haven't received your order - please contact customer support.": "Nous faisons toujours de notre mieux pour livrer votre colis sous 3 à 5 jours. Si vous n'avez pas reçu votre commande, veuillez contacter le service client.",
+    "Still have question?": "Vous avez encore des questions ?",
+    "Can’t find the answer your’re looking for? Please chat to our friendly team.": "Vous ne trouvez pas la réponse à votre question ? Contactez notre équipe.",
+    "get in touch": "entrer en contact",
+    "Subscribe with us": "Abonnez-vous avec nous",
+    "subscribe": "s'abonner",
+    "Beauty": "Beauté",
+    "Hair care": "Soins capillaires",
+    "Make-up": "Se maquiller",
+    "Perfumes and Fragrances": "Parfums et fragrances",
+    "Skincare": "Soins de la peau",
+    "Special offer": "Offre spéciale",
+    "Home and cooking": "Maison et cuisine",
+    "Home Decor": "Décoration d'intérieur",
+    "Kitchenware": "Ustensiles de cuisine",
+    "Small Electrical appliances": "Petits appareils électriques",
+    "Storage and organisation": "Stockage et organisation",
+    "Normalpris": "Prix ​​régulier",
+    "Health and personal care": "Santé et soins personnels",
+    "Diet and nutrition": "Régime alimentaire et nutrition",
+    "Healthcare": "soins de santé",
+    "Oral care": "Soins bucco-dentaires",
+    "Vitamins, minerals and supplements": "Vitamines, minéraux et suppléments",
+    "Pet products": "Produits pour animaux",
+    "Cats": "Chattes",
+    "Dogs": "Chiennes",
+    "Horses": "Chevaux",
+    "Small animals": "Petits animaux",
+    "Account": "Compte",
+    "Login": "Seconnecter",
+    "Categories": "Catégories",
+    "Make-Up": "Se maquiller",
+    "Body Care": "Soins du corps",
+    "Face Care": "Soins du visage",
+    "Babies and Children": "Bébés et enfants",
+    "Products": "Produits",
+    "New Products": "Nouveaux produits",
+    "Popular Products": "Produits populaires",
+    "Event Products": "Produits événementiels",
+    "Company": "Entreprise",
+    "Terms and Conditions": "Termes et conditions",
+    "Privacy Policy": "politique de confidentialité",
+    "Contact Us": "Contactez-nous",
+    "Follow us": "Suivez-nous",
+    "All Rights Reserved": "Tous droits réservés",
+    "Enter your email Address": "Entrez votre adresse e-mail",
+    "Membership": "Adhésion",
+    "Search...": "Recherche...",
+    "Basket": "Panier"
 }
