Convert en to fr and update text color of text

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -96,6 +96,9 @@
      "back_information" : "Back to information",
      "3d_secure" : "3D Secure Authentication",
      "3d_secure_note" : "Please complete the 3D Secure authentication to proceed with your payment.",
+     "Quantity": "Quantity",
+     "On your bill, charges may appear as": "On your bill, charges may appear as",
+     "You are eligible for free shipping!": "You are eligible for free shipping!",
 
      "your_total" : "Your total",
      "first_claim" : "Be the first and claim the new.",
@@ -232,5 +235,80 @@
      "Register now": "Register now",
      "Not an existing user?": "Not an existing user?",
      "Email": "Email",
-     "Password": "Password"
+     "Password": "Password",
+     "Membership Price": "Membership Price",
+     "Normal Price": "Normal Price",
+     "Medlemspris": "Medlemspris",
+     "Need help? Contact us for everything from plans to refunds": "Need help? Contact us for everything from plans to refunds",
+     "If You already have an account,": "If You already have an account,",
+     "Login now": "Login now",
+     "All Products": "All Products",
+     "Total": "Total",
+     "products": "products",
+     "Search for Product": "Search for Product",
+     "Member price": "Member price",
+     "PlusDeal prices only apply to members. The price for membership is €19.95/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.": "PlusDeal prices only apply to members. The price for membership is €19.95/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.",
+     "days Delivery": "days Delivery",
+     "Free delivery": "Free delivery",
+     "Discounts": "Discounts",
+     "Add to basket": "Add to basket",
+     "About this item": "About this item",
+     "Product Description": "Product Description",
+     "Product details": "Product details",
+     "Ingredients": "Ingredients",
+     "Recommended for you": "Recommended for you",
+     "All": "All",
+     "More Filter": "More Filter",
+     "Add Filter": "Add Filter",
+     "Subcategories": "Subcategories",
+     "Perfumes": "Perfumes",
+     "Cosmetics": "Cosmetics",
+     "Health": "Health",
+     "Toys": "Toys",
+     "Fancy Dress": "Fancy Dress",
+     "Computers": "Computers",
+     "Electronics": "Electronics",
+     "Access to 1.000 products": "Access to 1.000 products",
+     "days shipping": "days shipping",
+     "Free shipping": "Free shipping",
+     "Free returns": "Free returns",
+     "Get in touch": "Get in touch",
+     "We are still working on it!": "We are still working on it!",
+     "Stock": "Stock",
+     "Category": "Category",
+     "Size": "Size",
+     "Condition": "Condition",
+     "Collection of personal information": "Collection of personal information",
+     "Privacy of children": "Privacy of children",
+     "Use and processing of collected information": "Use and processing of collected information",
+     "Managing information": "Managing information",
+     "Disclosure of information": "Disclosure of information",
+     "Retention of information": "Retention of information",
+     "Cookies": "Cookies",
+     "Data analytics": "Data analytics",
+     "Do Not Track signals": "Do Not Track signals",
+     "Links to other resources": "Links to other resources",
+     "Information security": "Information security",
+     "Changes and amendments": "Changes and amendments",
+     "Your right to complain": "Your right to complain",
+     "Acceptance of this policy": "Acceptance of this policy",
+     "Contacting us": "Contacting us",
+     "Purchase and Membership Terms and Conditions For Plusdeal.fr (CC EUROPE LTD.)": "Purchase and Membership Terms and Conditions For Plusdeal.fr (CC EUROPE LTD.)",
+     "How to purchase": "How to purchase",
+     "Orders": "Orders",
+     "Payment": "Payment",
+     "Order cancellations": "Order cancellations",
+     "Delivery": "Delivery",
+     "Cancellation policies and return of products": "Cancellation policies and return of products",
+     "Returning products": "Returning products",
+     "Refund of purchase price": "Refund of purchase price",
+     "What do I need to return?": "What do I need to return?",
+     "How quickly should I file a complaint?": "How quickly should I file a complaint?",
+     "Defective product(s)": "Defective product(s)",
+     "Complaints": "Complaints",
+     "Children and minors": "Children and minors",
+     "Your personal information": "Your personal information",
+     "Disclaimer": "Disclaimer",
+     "Company information": "Company information",
+     "Year of Establishment": "Year of Establishment"
 }
