--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -97,6 +97,9 @@
     "back_information" : "Retour aux informations",
     "3d_secure" : "Authentification 3D sécurisée",
     "3d_secure_note" : "Veuillez compléter l'authentification 3D Secure pour procéder à votre paiement.",
+    "Quantity": "Quantité",
+    "On your bill, charges may appear as": "Sur votre facture, les frais peuvent apparaître comme",
+    "You are eligible for free shipping!": "Vous avez droit à la livraison gratuite !",
 
     "your_total" : "Votre totale",
     "first_claim" : "Soyez le premier et revendiquez le nouveau.",
@@ -231,5 +234,80 @@
     "Register now": "Inscrivez-vous maintenant",
     "Not an existing user?": "Vous n'êtes pas un utilisateur existant ?",
     "Email": "E-mail",
-    "Password": "Mot de passe"
+    "Password": "Mot de passe",
+    "Membership Price": "Prix ​​d'adhésion",
+    "Normal Price": "Prix ​​normal",
+    "Medlemspris": "Tarif membre",
+    "Need help? Contact us for everything from plans to refunds": "Besoin d'aide ? Contactez-nous pour tout, des forfaits aux remboursements.",
+    "If You already have an account,": "Si vous avez déjà un compte,",
+    "Login now": "Connectez-vous maintenant",
+    "All Products": "Tous les produits",
+    "Total": "Totale",
+    "products": "produits",
+    "Search for Product": "Rechercher un produit",
+    "Member price": "Tarif membre",
+    "PlusDeal prices only apply to members. The price for membership is €19.95/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.": "Les tarifs PlusDeal s'appliquent uniquement aux membres. L'abonnement est de 19,95 €/mois et se poursuit automatiquement jusqu'à sa résiliation. Résiliable à la fin de la période d'abonnement. Les 7 premiers jours sont gratuits – en savoir plus sur les avantages.",
+    "days Delivery": "jours Livraison",
+    "Free delivery": "Livraison gratuite",
+    "Discounts": "Réductions",
+    "Add to basket": "Ajouter au panier",
+    "About this item": "À propos de cet article",
+    "Product Description": "Description du produit",
+    "Product details": "Détails du produit",
+    "Ingredients": "Ingrédients",
+    "Recommended for you": "Recommandé pour vous",
+    "All": "Toute",
+    "More Filter": "Plus de filtres",
+    "Add Filter": "Ajouter un filtre",
+    "Subcategories": "Sous-catégories",
+    "Perfumes": "Parfums",
+    "Cosmetics": "Produits debeauté",
+    "Health": "Santé",
+    "Toys": "Jouets",
+    "Fancy Dress": "Déguisement",
+    "Computers": "Ordinateurs",
+    "Electronics": "Électronique",
+    "Access to 1.000 products": "Accès à 1 000 produits",
+    "days shipping": "jours d'expédition",
+    "Free shipping": "Livraison gratuite",
+    "Free returns": "Retours gratuits",
+    "Get in touch": "Entrer en contact",
+    "We are still working on it!": "Nous y travaillons encore !",
+    "Stock": "Action",
+    "Category": "Catégorie",
+    "Size": "Taille",
+    "Condition": "Condition",
+    "Collection of personal information": "Collecte de renseignements personnels",
+    "Privacy of children": "Vie privée des enfants",
+    "Use and processing of collected information": "Utilisation et traitement des informations collectées",
+    "Managing information": "Gestion de l'information",
+    "Disclosure of information": "Divulgation d'informations",
+    "Retention of information": "Conservation des informations",
+    "Cookies": "Cookies",
+    "Data analytics": "Analyse des données",
+    "Do Not Track signals": "Signaux « Ne pas suivre »",
+    "Links to other resources": "Liens vers d'autres ressources",
+    "Information security": "Sécurité de l'information",
+    "Changes and amendments": "Modifications et amendements",
+    "Your right to complain": "Votre droit de vous plaindre",
+    "Acceptance of this policy": "Acceptation de cette politique",
+    "Contacting us": "Nous contacter",
+    "Purchase and Membership Terms and Conditions For Plusdeal.fr (CC EUROPE LTD.)": "Conditions générales d'achat et d'adhésion pour Plusdeal.fr (CC EUROPE LTD.)",
+    "How to purchase": "Comment acheter",
+    "Orders": "Ordres",
+    "Payment": "Paiement",
+    "Order cancellations": "Annulations de commandes",
+    "Delivery": "Livraison",
+    "Cancellation policies and return of products": "Politiques d'annulation et de retour des produits",
+    "Returning products": "Retour des produits",
+    "Refund of purchase price": "Remboursement du prix d'achat",
+    "What do I need to return?": "Que dois-je retourner?",
+    "How quickly should I file a complaint?": "Dans quel délai dois-je déposer une plainte?",
+    "Defective product(s)": "Produit(s) défectueux",
+    "Complaints": "Plaintes",
+    "Children and minors": "Enfants et mineurs",
+    "Your personal information": "Vos informations personnelles",
+    "Disclaimer": "Clause de non-responsabilité",
+    "Company information": "Informations sur l'entreprise",
+    "Year of Establishment": "Année de création"
 }
