--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -310,5 +310,6 @@
      "Your personal information": "Your personal information",
      "Disclaimer": "Disclaimer",
      "Company information": "Company information",
-     "Year of Establishment": "Year of Establishment"
+     "Year of Establishment": "Year of Establishment",
+     "Normal price": "Normal price"
 }
