--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -309,5 +309,6 @@
     "Your personal information": "Vos informations personnelles",
     "Disclaimer": "Clause de non-responsabilité",
     "Company information": "Informations sur l'entreprise",
-    "Year of Establishment": "Année de création"
+    "Year of Establishment": "Année de création",
+    "Normal price": "Prix ​​normal"
 }
